# A2_Triangulation_Code

./: CMakeLists.txt
Triangulation/: CMakeLists.txt  main.cpp  triangulation.cpp  triangulation.h  triangulation_method.cpp
Tutorial_NonlinearLeastSquares/: CMakeLists.txt  main.cpp
easy3d/: CMakeLists.txt
easy3d/optimizer/: CMakeLists.txt  optimizer_lm.cpp  optimizer_lm.h
resources/data/: image_plane.off
